# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/

[build-system]
# PEP 518 https://www.python.org/dev/peps/pep-0518/
# https://discuss.python.org/t/help-testing-experimental-features-in-setuptools/13821
requires = [
  "setuptools>=64",
  "wheel",               # for bdist package distribution
  "setuptools_scm>=6.4", # for automated versioning
]

# PEP 517 https://peps.python.org/pep-0517/
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# include = []
# exclude = ["tests"]
namespaces = true

# PEP 621 https://peps.python.org/pep-0621/
[project]
name = "llama_cpp_api_client"
version = "0.1.0"
description = "LLaMA.cpp HTTP Server API Streaming Python Client"
authors = [{ name = "ubergarm" }, { email = "leimgrub@gmail.com" }]
maintainers = [{ name = "ubergarm" }, { email = "leimgrub@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]
keywords = ["package", "setuptools"]
dependencies = ["aiohttp"]
[project.optional-dependencies]
dev = ["pytest", "pytest-cov[all]", "mypy", "black", "isort"]
[project.urls]
Homepage = "https://github.com/ubergarm/llama-cpp-api-client"
documentation = "https://github.com/ubergarm/llama-cpp-api-client"
repository = "https://github.com/ubergarm/llama-cpp-api-client"
changelog = "https://github.com/ubergarm/llama-cpp-api-client/blob/main/CHANGELOG.md"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
